[package]
name = "sdftool"
version = "0.9.2"
edition = "2018"
build = "build.rs" 
publish = false
description = "Signed distance field font and image command line tool based on OpenCL."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
png = "0.17.1"
clap = "2.33.3"
opencl3 = "0.5"
rusttype = "0.9.2"
progress_bar = "0.1.3"
